xwayland: Keep ready fd until Xwayland is stopped

Xwayland writes the display name in two steps:

- first write the display name
- then write "\n"

Xwayland will quit if either write() fails. If the XwaylandLauncher
closes its endpoint of the displayfd after the first write(), then the
second write() may fail.

Given that we just want to know when Xwayland is ready, the ready fd
can be kept around until Xwayland is stopped.

The issue was introduced by 8e42599149bbd6e4e76baddd04b1c403131354ba
(kind of). Prior to that commit, kwin had been leaking the read endpoint
of the displayfd to Xwayland. So, even if kwin closes its endpoint,
Xwayland has it too so both write()s will succeed.

BUG: 498837